Fix header bar layout on small screens

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -69,8 +69,12 @@
 
 
 @media (max-width: 640px) {
+  .performance-platform-outer {
+    padding-top: 1em;
+  }
+
   #content {
-    padding: 1em;
+    padding: 0 1em;
     
     section {
       float:none;
